--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600&display=swap');
 
 ::selection {
-  background-color: #09170e;
+  background-color: #7d7d7d48;
   color: #fff;
 }
 
