--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ html, body {
   text-rendering: optimizeLegibility;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+  background: #1f1f1f;
 
 }
 body {
