--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,15 @@
 }
 * {
   margin: 0;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none
 }
 html, body {
   height: 100%;
